--- a/src/page/FlashCard/index.less
+++ b/src/page/FlashCard/index.less
@@ -44,11 +44,18 @@
           }
 
           .word {
-            font-size: 6rem;
+            font-size: 4rem;
             text-align: center;
-            line-height: 40rem;
+            line-height: 30rem;
             width: 100%;
-            height: 100%;
+            height: 50%;
+          }
+
+          .pronunciation {
+            font-size: 3rem;
+            width: 100%;
+            height: 50%;
+            text-align: center;
           }
           .pre-btn, .next-btn {
             width: 20rem;
